fix mobile view and hide doc nav on narrow viewport

--- a/overrides.css
+++ b/overrides.css
@@ -1,7 +1,7 @@
 /* Deno Doc Overrides */
 
 div.ddoc {
-  @apply flex h-screen p-2 pt-0;
+  @apply flex h-screen p-8 pt-2 sm:p-4 lg:p-2 lg:pt-0;
 }
 
 /* First column: fixed width of 300px */
@@ -14,8 +14,20 @@ div.ddoc {
   @apply flex-grow;
 }
 
+.toc {
+  @apply hidden;
+}
+
 .ddoc > .toc {
-  @apply flex flex-col h-full max-h-screen border-r border-gray-000;
+  @apply hidden md:flex md:flex-col !important;
+}
+
+.ddoc > div > div#content > div.toc {
+  @apply hidden xl:flex xl:flex-col !important;
+}
+
+.ddoc > .toc {
+  @apply h-full max-h-screen border-r border-gray-000;
 }
 
 .ddoc .documentNavigation > h3 {
@@ -63,6 +75,10 @@ div.ddoc {
 /* This comes from gfm css, should be replaced with something in our color palette once we establish it. */
 .ddoc .markdown :not(pre) > code {
   background-color: var(--color-neutral-muted) !important;
+}
+
+.ddoc .markdown pre {
+  @apply border-gray-000 !important;
 }
 
 .ddoc .max-w-prose {
